--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,6 +4,7 @@ djangorestframework==3.11.1
 djangorestframework-simplejwt==4.4.0
 drf-yasg==1.17.1
 factory-boy==3.0.1
+Pillow==7.2.0
 # django-debug-toolbar==2.2
 # django-extensions==3.0.5
 # uwsgi
