--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,19 +2,19 @@
 django==3.1.0
 djangorestframework==3.11.1
 djangorestframework-simplejwt==4.4.0
-social-auth-app-django==4.0.0
+django-extensions==3.0.5
 django-filter==2.3.0
 drf-yasg==1.17.1
 factory-boy==3.0.1
 Pillow==7.2.0
 # django-debug-toolbar==2.2
-# django-extensions==3.0.5
+# social-auth-app-django==4.0.0
 
 # uwsgi
 uwsgi==2.0.18
 
 # mysql
-mysqlclient==1.4.6
+mysqlclient
 
 # celery
 redis==3.5.3
