--- a/compose/mysql/conf/my.cnf
+++ b/compose/mysql/conf/my.cnf
@@ -1,8 +1,12 @@
 [mysqld]
 user=mysql
 default-storage-engine=INNODB
+init_connect='SET collation_connection = utf8_unicode_ci'
+init_connect='SET NAMES utf8'
 character-set-server=utf8
- 
+collation-server = utf8_unicode_ci # 儲存中文字
+skip-character-set-client-handshake
+
 port            = 3306
 #bind-address= localhost #一定要注释掉，mysql所在容器和django所在容器不同IP
  
