--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,7 @@ services:
     volumes:
       - ./api/static:/usr/share/nginx/html/static
       - ./compose/nginx/ssl:/usr/share/nginx/ssl 
+      - ./compose/nginx/conf:/etc/nginx/conf.d
       - ./compose/nginx/log:/var/log/nginx 
       - api_media_vol:/usr/share/nginx/html/media 
     depends_on:
