--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ djangorestframework==3.11.1
 djangorestframework-simplejwt==4.4.0
 django-extensions==3.0.5
 django-filter==2.3.0
+django-cors-headers==3.5.0
 drf-yasg==1.17.1
 factory-boy==3.0.1
 Pillow==7.2.0
