--- a/compose/nginx/conf/nginx.conf
+++ b/compose/nginx/conf/nginx.conf
@@ -2,6 +2,10 @@ upstream django {
      ip_hash;
      server web:8000;
 }
+
+upstream frontend {
+    server frontend:8080;
+}
  
 server {
     listen 80; 
@@ -18,7 +22,7 @@ server {
         alias /usr/share/nginx/html/media; 
     }
 
-    location / {
+    location ~ ^/(admin|api|swagger) {
         include /etc/nginx/uwsgi_params;
         uwsgi_pass django;
         uwsgi_read_timeout 600;
@@ -29,6 +33,23 @@ server {
         proxy_set_header Host $http_host;
         proxy_redirect off;
         proxy_set_header X-Real-IP  $remote_addr;
+    }
+
+    location / {
+      proxy_redirect off;
+      proxy_pass http://frontend;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $http_host;
+    }
+
+    location /sockjs-node {
+      proxy_redirect off;
+      proxy_pass http://frontend;
+      proxy_set_header X-Real-IP  $remote_addr;
+      proxy_set_header X-Forwarded-For $remote_addr;
+      proxy_set_header Host $host;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
     }
 }
  
