add send order function and fix order quantity at least 1

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@ secrets.py
 api/static/*
 !*api/static/readme.txt
 
-# api/media/
+*.json.gz
+*.json
 
 # exclude everything
 api/core/migrations/*
