--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@
 django==3.1.0
 djangorestframework==3.11.1
 djangorestframework-simplejwt==4.4.0
+PyJWT==1.71
 django-extensions==3.0.5
 django-filter==2.3.0
 django-cors-headers==3.5.0
